src/objects/FMA_History__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>FMA Histories</relationshipLabel>
        <relationshipName>FMA_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_FMA_Accounts__c</fullName>
        <label>Number of FMA Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>FMA Histories</relationshipLabel>
        <relationshipName>FMA_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Comments__c</fullName>
        <label>Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Period_Start__c</fullName>
        <label>Review Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FMA History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FMA History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMA Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>